# src/models/entities/discount.ts
@@ -1,12 +1,13 @@
+import { TypeDiscount } from '@dtos/enum/type_discount.enum';
 import { Document } from 'mongoose';
 
-export interface Discount extends Document {
-  id: string;
+export interface DiscountDocument extends Discount, Document {}
+export interface Discount {
   name: string;
-  type: string;
+  type: TypeDiscount; // e.g., 'percentage' | 'fixed'
   value: number;
   active: boolean;
   start_date: Date;
   end_date: Date;
-  product_id: string;
+  product_ids: string[];
 }
