# src/models/entities/product.ts
@@ -1,10 +1,0 @@
-import { Document } from 'mongoose';
-
-export interface Product extends Document {
-  id: string;
-  name: string;
-  description: string;
-  price: number;
-  category: string;
-  special_price?: number;
-}
